fix: check response when requesting etfs